openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: test
spec:
  selector:
    app: test
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
