openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test
  labels:
    app: test
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: test
